# elm-codegen

./: Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
crates/elm-client-gen-builder/: Cargo.toml  README.md
crates/elm-client-gen-builder/src/: decoder.rs  encoder.rs  endpoint.rs  lib.rs  module_builder.rs  name_map.rs  overrides.rs  request_style.rs  strategy.rs  type_builder.rs
crates/elm-client-gen-builder/tests/: proptest.rs  smoke.rs  snapshot.rs
crates/elm-client-gen-builder/tests/snapshots/: snapshot__bare_string_enum_module.snap  snapshot__internally_tagged_enum_module.snap  snapshot__merge_tagged_object_module.snap  snapshot__newtype_module.snap  snapshot__record_module.snap  snapshot__tuple_fields_module.snap  snapshot__untagged_enum_module.snap
crates/elm-client-gen-cli/: Cargo.toml  README.md
crates/elm-client-gen-cli/src/: lib.rs  main.rs
crates/elm-client-gen-cli/tests/: smoke.rs
crates/elm-client-gen-core/: Cargo.toml  README.md
crates/elm-client-gen-core/src/: lib.rs
crates/elm-client-gen-derive/: Cargo.toml  README.md
crates/elm-client-gen-derive-tests/: Cargo.toml
crates/elm-client-gen-derive-tests/src/: lib.rs
crates/elm-client-gen-derive-tests/tests/: trybuild.rs
crates/elm-client-gen-derive-tests/tests/compile_fail/: conflicting_serde_attrs.rs  conflicting_serde_attrs.stderr  externally_tagged_enum.rs  externally_tagged_enum.stderr  generic_struct.rs  generic_struct.stderr  missing_module.rs  missing_module.stderr  multi_field_tuple_struct.rs  multi_field_tuple_struct.stderr  non_string_map_key.rs  non_string_map_key.stderr  tuple_arity_four.rs  tuple_arity_four.stderr  union.rs  union.stderr  unit_struct.rs  unit_struct.stderr  untagged_multi_field_tuple_variant.rs  untagged_multi_field_tuple_variant.stderr
crates/elm-client-gen-derive-tests/tests/compile_pass/: bare_string_enum.rs  internally_tagged_enum.rs  newtype_struct.rs  record_struct.rs  untagged_enum.rs
crates/elm-client-gen-derive/src/: lib.rs
crates/elm-client-gen-http/: Cargo.toml  README.md
crates/elm-client-gen-http/src/: lib.rs  traits.rs
crates/elm-client-gen-http/tests/: macro_smoke.rs
crates/elm-codegen-builder/: Cargo.toml  README.md
crates/elm-codegen-builder/src/: decoder.rs  encoder.rs  endpoint.rs  helpers.rs  lib.rs  module_builder.rs  name_map.rs  overrides.rs  request_style.rs  type_builder.rs
crates/elm-codegen-builder/tests/: smoke.rs
crates/elm-codegen-builder/tests/snapshots/: snapshot__bare_string_enum_module.snap  snapshot__merge_tagged_object_module.snap  snapshot__newtype_module.snap  snapshot__tuple_fields_module.snap  snapshot__untagged_enum_module.snap
crates/elm-codegen-cli/: README.md
crates/elm-codegen-cli/src/: main.rs
crates/elm-codegen-core/: README.md
crates/elm-codegen-core/src/: lib.rs
crates/elm-codegen-derive/: README.md
crates/elm-codegen-derive/src/: lib.rs
crates/elm-codegen-http/: Cargo.toml  README.md
crates/elm-codegen-http/src/: lib.rs  traits.rs
crates/elm-codegen-http/tests/: macro_smoke.rs
docs/: http-endpoints-design.md
xtask/: Cargo.toml
xtask/src/: main.rs
