[workspace]
resolver = "2"
members = [
    "crates/elm-codegen-core",
    "crates/elm-codegen-derive",
    "crates/elm-codegen-derive-tests",
    "crates/elm-codegen-builder",
    "crates/elm-codegen-http",
    "crates/elm-codegen-cli",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshburgess/elm-codegen"
authors = ["Josh Burgess"]

[workspace.dependencies]
elm-codegen-core = { path = "crates/elm-codegen-core", version = "0.2.2", default-features = false }
elm-codegen-derive = { path = "crates/elm-codegen-derive", version = "0.2.2" }
elm-codegen-builder = { path = "crates/elm-codegen-builder", version = "0.2.2" }
elm-codegen-http = { path = "crates/elm-codegen-http", version = "0.2.2" }

elm-ast = "0.2.0"
inventory = "0.3"
anyhow = "1.0"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
clap = { version = "4", features = ["derive"] }
trybuild = "1"
insta = "1"
proptest = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = false
incremental = false

[profile.ci]
inherits = "release"
lto = false
codegen-units = 16
strip = "none"
debug = false
incremental = false
