[workspace]
resolver = "2"
members = [
    "crates/elm-client-gen-core",
    "crates/elm-client-gen-derive",
    "crates/elm-client-gen-derive-tests",
    "crates/elm-client-gen-builder",
    "crates/elm-client-gen-http",
    "crates/elm-client-gen-cli",
    "xtask",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshburgess/elm-client-gen"
authors = ["Josh Burgess"]

[workspace.dependencies]
elm-client-gen-core = { path = "crates/elm-client-gen-core", version = "0.4.0", default-features = false }
elm-client-gen-derive = { path = "crates/elm-client-gen-derive", version = "0.4.0" }
elm-client-gen-builder = { path = "crates/elm-client-gen-builder", version = "0.4.0" }
elm-client-gen-http = { path = "crates/elm-client-gen-http", version = "0.4.0" }

elm-ast = "0.2.0"
inventory = "0.3"
anyhow = "1.0"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
clap = { version = "4", features = ["derive"] }
trybuild = "1"
insta = "1"
proptest = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = false
incremental = false

[profile.ci]
inherits = "release"
lto = false
codegen-units = 16
strip = "none"
debug = false
incremental = false
