[package]
name = "elm-client-gen-builder"
description = "Build Elm AST modules (records, decoders, encoders, imports) from elm-client-gen-core type info."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
elm-client-gen-core.workspace = true
elm-client-gen-http.workspace = true
elm-ast.workspace = true

[dev-dependencies]
elm-client-gen-core = { workspace = true, features = ["derive"] }
elm-client-gen-http = { workspace = true, features = ["derive"] }
insta.workspace = true
proptest.workspace = true
