[package]
name = "elm-client-gen-cli"
description = "Reference CLI that reads the elm-client-gen-core registry and writes Elm modules."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "elm-client-gen"
path = "src/main.rs"

[dependencies]
elm-client-gen-core.workspace = true
elm-client-gen-builder.workspace = true
elm-ast.workspace = true
clap.workspace = true
anyhow.workspace = true

[dev-dependencies]
elm-client-gen-core = { workspace = true, features = ["derive"] }
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
